--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,9 @@ python = "^3.11"
 psycopg2 = "^2.9.9"
 django = "^4.2.6"
 pillow = "^10.1.0"
+djangorestframework-simplejwt = "^5.3.0"
+djangorestframework = "^3.14.0"
+djoser = "^2.2.0"
 
 
 [build-system]
