--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,5 +1,5 @@
 [tool.poetry]
-name = "pythonproject5"
+name = "pythonProject5"
 version = "0.1.0"
 description = ""
 authors = ["Your Name <you@example.com>"]
