--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,8 @@ pillow = "^10.1.0"
 djangorestframework-simplejwt = "^5.3.0"
 djangorestframework = "^3.14.0"
 djoser = "^2.2.0"
+drf-base64 = "^2.0"
+drf-extra-fields = "^3.7.0"
 
 
 [build-system]
